--- a/TakeoutAssistant_Team3_ios/Base.lproj/Main.storyboard
+++ b/TakeoutAssistant_Team3_ios/Base.lproj/Main.storyboard
@@ -5,6 +5,24 @@
     </dependencies>
     <scenes>
         <!--View Controller-->
+        <scene sceneID="sqZ-5C-0ea">
+            <objects>
+                <viewController id="13e-nN-hcC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="R6s-b9-yOS"/>
+                        <viewControllerLayoutGuide type="bottom" id="68S-qV-y5z"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="3Xt-l5-Ddc">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="e9t-pC-BBr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="910" y="-462"/>
+        </scene>
+        <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
@@ -16,20 +34,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="goA-xO-jou">
-                                <rect key="frame" x="248" y="457" width="46" height="30"/>
-                                <state key="normal" title="Button">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="goA-xO-jou">
+                                <rect key="frame" x="545" y="55" width="30" height="28"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <state key="normal" title="+">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="AddNew:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wxS-VB-cDe"/>
                                 </connections>
                             </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="REb-TR-4Be">
+                                <rect key="frame" x="121" y="149" width="358" height="348"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="p5t-8C-mY7"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="b4h-yI-nVz"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="goA-xO-jou" secondAttribute="centerX" constant="-6" id="EgE-yG-PMK"/>
+                            <constraint firstAttribute="centerX" secondItem="REb-TR-4Be" secondAttribute="centerX" constant="-0.5" id="TPg-QV-wuq"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="chooseButton" destination="goA-xO-jou" id="pHK-ZX-kvY"/>
+                        <outlet property="tableView" destination="REb-TR-4Be" id="Pn9-rd-ctc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
