--- a/TakeoutAssistant_Team3_ios/Base.lproj/Main.storyboard
+++ b/TakeoutAssistant_Team3_ios/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="goA-xO-jou">
-                                <rect key="frame" x="248" y="457" width="46" height="30"/>
+                                <rect key="frame" x="118" y="464" width="46" height="30"/>
                                 <state key="normal" title="Button">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -25,11 +25,19 @@
                                     <action selector="AddNew:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wxS-VB-cDe"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Md8-qn-r8H">
+                                <rect key="frame" x="16" y="15" width="241" height="202"/>
+                            </imageView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="qT0-9z-FLs">
+                                <rect key="frame" x="126" y="290" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="qT0-9z-FLs" id="5Ci-mP-tsK"/>
                         <outlet property="chooseButton" destination="goA-xO-jou" id="pHK-ZX-kvY"/>
+                        <outlet property="imageView" destination="Md8-qn-r8H" id="j41-m4-9La"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
